# attendance-rs

./: .gitignore  Cargo.toml  Dockerfile  README.md  attendance-rs-startup.sh  docker-compose.yml  gen_keys.sh  sqlx-data.json
migrations/: 20210629-115550-initial-migration.sql  20210629115550_initial_migration.sql  20210630150629_unique_constraints.sql  20210703225142_authorization_table.sql  20210703231748_prevent_null_on_token_capability.sql  20210703231827_add_create_and_update_times_to_user.sql  20210704231603_prevent_null_on_token_expiration_time.sql  20211109214138_alt_fields_for_user_identification.sql  genmigration.sh
src/: graphql_schema.rs  main.rs  tables.rs
