[package]
name = "attendance-rs"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jwt = "0.14.0"
sha2 = "0.9.5"
hmac = "0.11.0"
sqlx = { version = "0.5", features = ["postgres", "runtime-async-std-rustls", "uuid", "chrono"]}
chrono = "0.4.19"
async-graphql = { version="2.9.5", features = ["chrono"]}
async-graphql-tide = "2.9.5"
async-std = { version = "1.9", features = ["attributes"]}
tide = "0.16.0"
futures = "0.3.15"
